# demo.asistenceAI

./: .gitignore  ANEXOS HCM.csv  ANEXOS HCM.xlsx  README.md  apply_migrations.py  cargar_anexos.py  crear_datos.py  create_admin.py  docker-compose.yml  gen_hash.py  hospital.db  inspect_db.py  prueba_medica.py  pyproject.toml  repair_db.py  requirements.txt  seed_user.py  test_connection.py
backups_legacy/: agente_hospital.py  agente_hospital_v4.py  agente_hospital_v5.py
database/: 04_create_views.sql  05_audit_log.sql  init_nexa_full.sql
src/application/: prompts copy.py  prompts.py  rag_agent copy.py  rag_agent.py  use_cases.py
src/domain/: entities.py  interfaces.py
src/hospital_assistant_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/infrastructure/: admin_repository.py  database.py  database.py.bak  exceptions.py  llm_client.py  models.py  repositories.py  security.py
src/ui/: admin_panel.py  components.py  main.py  ui_logo_helper.py
src/ui/assets/: style copy.css  style.css
tests/: conftest.py  test_db_integration.py  test_rag_agent_manual.py
tests/infrastructure/: test_repositories.py
